--- a/source/views/index.html
+++ b/source/views/index.html
@@ -1,82 +1,171 @@
-<!DOCTYPE html>
-<%-include('partials/head.html')%>
+<!doctype html>
+<html lang="en">
+<%-include('partials/head.html');%>
+
+
 <body>
-    <header> 
-        <%-include('partials/navegacion.html');%> 
-    </header>
-    <div class="container" style="text-align: center; max-width: 0 auto;">
-        <section>
-            <h2>Novedades</h2>
-            <article class="articles">
-                <br>
-                <h4>Tenis Forum 84 Hi</h4>
-                <img src="img/tenis1.jpg" alt="" class="imgCatalogo">
-                <h5>$2,999</h5>
-            </article>
     
-            <article class="articles">
-                <br>
-                <h4>Tenis Forum Low</h4>
-                <img src="img/tenis2.jpg" alt="" class="imgCatalogo">
-                <h5>$2,199</h5>
-            </article>
-    
-            <article class="articles">
-                <br>
-                <h4>Tenis U_Path Run</h4>
-                <img src="img/teni3.jpg" alt="" class="imgCatalogo">
-                <h5>$1,399.30</h5>
-            </article>
-        </section>
-    
-        <section>
-            <article class="articles">
-                <br>
-                <h4>Chamarra SST Primeblue</h4>
-                <img src="img/chamarra.jpg" alt="" class="imgCatalogo">
-                <h5>$1,599</h5>
-            </article>
-    
-            <article class="articles">
-                <br>
-                <h4>Chamarra SST Primeblue</h4>
-                <img src="img/chamarra1.jpg" alt="" class="imgCatalogo">
-                <h5>$1,599</h5>
-            </article class="articles">
-    
-            <article class="articles">
-                <br>
-                <h4>Pants Deportivos SST Primeblue</h4>
-                <img src="img/pants.jpg" alt="" class="imgCatalogo">
-                <h5>$1,399</h5>
-            </article>
-        </section>
-    
-        <section>
-            <article class="articles">
-                <br>
-                <h4>Pants Deportivos SST Primeblue</h4>
-                <img src="img/pants2.jpg" alt="" class="imgCatalogo">
-                <h5>$1,399</h5>
-            </article>
-    
-            <article class="articles">
-                <br>
-                <h4>Mochila Classic Badge of Sport (UNISEX)</h4>
-                <img src="img/mochila.jpg" alt="" class="imgCatalogo">
-                <h5>$419.30</h5>
-            </article class="articles">
-    
-            <article class="articles">
-                <br>
-                <h4>Playera Designed to Move Estampada</h4>
-                <img src="img/camisa.jpg" alt="" class="imgCatalogo">
-                <h5>$499<a/h5>
-            </article>
-        </section>
+  <header><%-include('partials/navegacion.html');%></header>
+      <!-- Bootstrap core CSS -->
+<link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+</style>
+
+
+<main>
+
+  <section class="py-5 text-center container">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light">ADIDAS</h1>
+        <p class="fw-light" >NOVEDADES</p>
+      </div>
     </div>
+  </section>
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="img/tenis1.jpg" alt="" class="" id="tenis1">
+            <div class="card-body">
+              <p class="card-text" >Tomemos un momento para rendir homenaje a un ícono. ¿Será la leyenda que desafiaba la gravedad en los años 80? ¿O tal vez los tenis que le daban estatus a los pies de raperos?</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">Forum</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="img/tenis2.jpg" alt="" class="">
+            <div class="card-body">
+              <p class="card-text">Los tenis adidas Forum han dominado las canchas de básquet y las calles, y ahora regresan con una versión de corte medio para llevar tus pasos a otro nivel. </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">Forum</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="img/teni3.jpg" alt="" class="">
+            <div class="card-body">
+              <p class="card-text">Dale nueva vida a tu rutina diaria con estos tenis adidas. Inspirados en el calzado de running pero actualizados para pasos más lentos</p>
+              <div class="d-flex justify-content-between align-items-center">
+                </div>
+                <small class="text-muted">U_Path</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/chamarra1.jpg" alt="" class="">
+              <div class="card-body">
+                <p class="card-text">Una chamarra sin precedentes. Puede que se vea solo como una prenda icónica clásica de adidas, pero esta chamarra SST Primeblue simboliza el cambio.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                  <small class="text-muted">SST Prime</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="img/chamarra.jpg" alt="" class="">
+                <div class="card-body">
+                  <p class="card-text">Su diseño está confeccionado con Parley Ocean Plastic, hecho con residuos plásticos recuperados de las costas.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">SST Prime</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="img/pants.jpg" alt="" class="">
+                <div class="card-body">
+                  <p class="card-text">El sello inconfundible de la marca se destaca a lo largo de las piernas.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">SST PRIME</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+    
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="img/pants2.jpg" alt="" class="">
+                <div class="card-body">
+                  <p class="card-text">El sello inconfundible de la marca se destaca a lo largo de las piernas.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">SST PRIME</small>
+                  </div>
+                </div>
+              </div>
+            </div>          
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="img/mochila.jpg" alt="" class="">
+                <div class="card-body">
+                  <p class="card-text">Incluso antes de ir al gimnasio, tu compromiso con el deporte es claro. El logo adidas Badge of Sport en esta mochila lo dice todo.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">CLASSIC</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="img/camisa.jpg" alt="" class="">
+                <div class="card-body">
+                  <p class="card-text">Los días ajetreados requieren de una playera que pueda seguirle el ritmo. Esta playera es perfecta para los entrenamientos por la mañana y las salidas con amigos.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">CLASSIC</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+
+      </div>
+    </div>
+
+
+  
+
+</main>
+
+<script src="assets/dist/js/bootstrap.bundle.min.js"></script>      
 </body>
-<div>
-    <%-include('partials/footer.html');%>
-</div>
+
+<footer>
+  <%-include('partials/footer.html');%>
+</footer>
 </html>
+
+
+
